--- a/http/index.html
+++ b/http/index.html
@@ -13,6 +13,7 @@
 		<script src="../bower_components/angular-animate/angular-animate.js"></script>
 		<script src="../bower_components/angular-route/angular-route.js"></script>
 		<script src="../bower_components/angular-resource/angular-resource.js"></script>
+		<script src="../bower_components/angular-devise/lib/devise-min.js"></script>
 		<script src="js/app.js"></script>
 		<script src="js/controllers.js"></script>
 		<script src="js/services.js"></script>
@@ -45,7 +46,9 @@
 		</div>
 		</nav>
 		<div class="view-container">
-			<div ng-view></div>
+			<div ng-view>
+
+                        </div>
 		</div>
 	</body>
 </html>
